--- a/ApiDemosGithub/res/layout/activity_main.xml
+++ b/ApiDemosGithub/res/layout/activity_main.xml
@@ -12,4 +12,12 @@
         android:layout_centerVertical="true"
         android:text="@string/hello_world" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Button" />
+
 </RelativeLayout>
