--- a/ApiDemosGithub/res/layout/activity_main.xml
+++ b/ApiDemosGithub/res/layout/activity_main.xml
@@ -5,10 +5,19 @@
     tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/hello_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="Activity1" />
 
 </RelativeLayout>
