--- a/ApiDemosGithub/res/layout/activity_main.xml
+++ b/ApiDemosGithub/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:layout_alignParentRight="true"
         android:text="Button" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignParentRight="true"
+        android:text="Button" />
+
 </RelativeLayout>
